fix(bicicletas-lista): 🐛 centralize on Firefox

--- a/css/home/bicicletas-lista.css
+++ b/css/home/bicicletas-lista.css
@@ -42,6 +42,9 @@
   justify-content: center;
   max-width: 1400px;
   overflow-x: auto;
+  margin: 0 auto;
+  width: 100%;
+  box-sizing: border-box;
 }
 
 .bicicletas-lista li {
